Cambios antes de enviar los datos al back

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,13 @@
       name="keywords"
       content="material-ui, admin dashboard, admin template, react, react template, react admin template, react dashboard, react admin panel"
     /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="/build/static/js/main.9db1a549.chunk.js"></script>
   </body>
 </html>
